--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,14 @@
     <body>
         
     <div class="container">
-        <div class="jumbotron mt-3">
-            <h1>Christian Hafner</h1>
+        <div class="container rounded bg-light mt-3 p-3" style="display:flex;flex-direction:row;flex-wrap:wrap">
+            <img class="rounded" src="img/hafner_portrait.png"/>
+            <div class="mx-4 my-auto" style="flex-grow: 1;flex-basis: 200px">
+                <h1>Christian Hafner</h1>
+                I am a PhD student in computational design and digital fabrication at <a href="https://ist.ac.at/">IST Austria</a>.
+                In my research, I try to find out how the physical limits of mechanical systems can be described geometrically.
+            </div>
+            <img class="rounded"  src="img/geometria_mechanicus.png"/>
         </div>
 
         {{ content }}
