--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -5,3 +5,9 @@ body {
 h1, h2, h3 {
     font-family: "Roboto Slab", serif;
 }
+
+img {
+    align-self: center;
+    max-width: 100%;
+    max-height: 100%;
+}
