--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,14 @@
     <body>
         
     <div class="container">
-        <div class="container rounded bg-light mt-3 p-3" style="display:flex;flex-direction:row;flex-wrap:wrap">
-            <img class="rounded" src="img/hafner_portrait.png"/>
-            <div class="mx-4 my-auto" style="flex-grow: 1;flex-basis: 200px">
+        <div class="container rounded bg-light mt-3 p-3" style="display:flex;flex-direction:row;flex-wrap:wrap;align-items:center">
+            <div><img class="rounded mx-auto" style="width:100%" src="img/hafner_portrait.png"/></div>
+            <div class="mx-4 my-auto" style="flex-grow:1;flex-basis:200px">
                 <h1>Christian Hafner</h1>
                 I am a PhD student in computational design and digital fabrication at <a href="https://ist.ac.at/">IST Austria</a>.
                 In my research, I try to find out how the physical limits of mechanical systems can be described geometrically.
             </div>
-            <img class="rounded"  src="img/geometria_mechanicus.png"/>
+            <div><img class="rounded mx-auto"  src="img/geometria_mechanicus.png"/></div>
         </div>
 
         {{ content }}
