--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,8 +8,9 @@
             <div><img class="rounded mx-auto" src="img/hafner_portrait.png"/></div>
             <div class="mx-4 my-2" style="flex-grow:1;flex-basis:200px">
                 <h1>Christian Hafner</h1>
-                I am a PhD student in computational design and digital fabrication at <a href="https://ist.ac.at/">IST Austria</a>.
-                In my research, I try to find out how the physical limits of mechanical systems can be described geometrically.
+                <div class="my-2">I am a PhD student in computational design and digital fabrication at <a href="https://ist.ac.at/">IST Austria</a>.
+                In my research, I try to find out how the physical limits of mechanical systems can be described geometrically.</div>
+                <div class="mx-4 my-2"><a href="mailto:chafner@ist.ac.at"><i class="fa fa-envelope" style="font-size:24px"></i></a></div>
             </div>
             <div><img class="rounded mx-auto"  src="img/geometria_mechanicus.png"/></div>
         </div>
