--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -6,6 +6,10 @@ h1, h2, h3 {
     font-family: "Roboto Slab", serif;
 }
 
+h2 {
+    margin-bottom: 1rem!important;
+}
+
 img {
     max-width: 100%;
     max-height: 100%;
