--- a/_includes/portrait.html
+++ b/_includes/portrait.html
@@ -7,6 +7,7 @@
         <div class="mx-4" style="display:flex;flex-direction:row;align-items:center">
             <a href="mailto:chafner@ist.ac.at" class="mx-2" style="font-size:24px"><i class="fa fa-envelope"></i></a>
             <span class="mx-2" style="font-size:20px"><a href="https://pub.ist.ac.at/~chafner/CV_Hafner_Oct2021.pdf"><b>CV</b></a></span>
+            <a href="https://github.com/chrishafner" class="mx-2" style="font-size:24px"><i class="fa fa-github"></i></a>
         </div>
     </div>
     <div><img class="rounded" src="img/geometria_mechanicus.png"/></div>
