--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -7,7 +7,8 @@ h1, h2, h3 {
 }
 
 h2 {
-    margin-bottom: 1rem!important;
+    margin-bottom: 1.5rem!important;
+    margin-top: 0.5rem!important;
 }
 
 img {
