--- a/_includes/portrait.html
+++ b/_includes/portrait.html
@@ -2,11 +2,11 @@
     <div><img class="rounded" src="img/hafner_portrait.png"/></div>
     <div class="mx-4 my-2" style="flex-grow:1;flex-basis:200px">
         <h1>Christian Hafner</h1>
-        <div class="my-2">I am a PhD student in computational design and digital fabrication at <a href="https://ist.ac.at/">IST Austria</a>.
+        <div class="my-2">I am a research engineer in computer graphics and physics simulation at <a href="https://ist.ac.at/">ISTA</a>.
         In my research, I try to find out how the physical limits of mechanical systems can be described geometrically.</div>
         <div class="mx-4" style="display:flex;flex-direction:row;align-items:center">
             <a href="mailto:chafner@ist.ac.at" class="mx-2" style="font-size:24px"><i class="fa fa-envelope"></i></a>
-            <span class="mx-2" style="font-size:20px"><a href="https://pub.ist.ac.at/~chafner/CV_Hafner_Apr2022.pdf"><b>CV</b></a></span>
+            <span class="mx-2" style="font-size:20px"><a href="https://pub.ist.ac.at/~chafner/CV_Hafner_Jul2023.pdf"><b>CV</b></a></span>
             <a href="https://github.com/chrishafner" class="mx-2" style="font-size:24px"><i class="fa fa-github"></i></a>
         </div>
     </div>
