--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -15,3 +15,19 @@ img {
     max-width: 100%;
     max-height: 100%;
 }
+
+.piececol {
+    cursor: pointer;
+    border-left: solid 2px white;
+}
+
+.piececol i {
+    width: 10px;
+}
+
+.piececol.collapsed .fa-caret-down {
+    display: none;
+}
+.piececol:not(.collapsed) .fa-caret-right {
+    display: none;
+}
